compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__record_with_field_named_constructor.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\npub record Thing {\n  Thing(constructor: Nil)\n}\n\npub fn main() {\n  let a = Thing(constructor: Nil)\n  let b = Thing(..a, constructor: Nil)\n  b.constructor\n}\n"
---
----- SOURCE CODE

pub record Thing {
  Thing(constructor: Nil)
}

pub fn main() {
  let a = Thing(constructor: Nil)
  let b = Thing(..a, constructor: Nil)
  b.constructor
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../rakun.mjs";

export class Thing extends $CustomType {
  constructor(constructor) {
    super();
    this.constructor$ = constructor;
  }
}

export function main() {
  let a = new Thing(undefined);
  let b = a.withFields({ constructor$: undefined });
  return b.constructor$;
}
