compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__unnamed_fields.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\ntype Ip{\n    Ip(String)\n}\n\nconst local = Ip(\"0.0.0.0\")\n\nfn build(x) {\n    x(\"1.2.3.4\")\n}\n\nfn go() {\n    build(Ip)\n    Ip(\"5.6.7.8\")\n}\n\nfn destructure(x) {\n  let Ip(raw) = x\n  raw\n}\n"
---
import { CustomType as $CustomType } from "../rakun.mjs";

class Ip extends $CustomType {
  constructor(x0) {
    super();
    this[0] = x0;
  }
}

function build(x) {
  return x("1.2.3.4");
}

function go() {
  build((var0) => { return new Ip(var0); });
  return new Ip("5.6.7.8");
}

function destructure(x) {
  let raw = x[0];
  return raw;
}

const local = /* @__PURE__ */ new Ip("0.0.0.0");
