compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__zero_arity_imported_typscript.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 49
expression: "import other\npub fn main() {\n  other.Two\n}"
---
----- SOURCE CODE
import other
pub fn main() {
  other.Two
}

----- TYPESCRIPT DEFINITIONS
import type * as $other from "../other.d.mts";

export function main(): $other.One$;
