compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__zero_arity_imported_unqualified.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 60
expression: "import other.{Two}\npub fn main() {\n  Two\n}"
---
----- SOURCE CODE
import other.{Two}
pub fn main() {
  Two
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

export function main() {
  return new Two();
}
